# calculator

./: CMakeLists.txt  LICENSE.txt  calculator.files  calculator.includes  presentation_draft1.pptx  tasks.csv
gui/: mainwindow.ui
incl/: angletype.h  binaryoperationtype.h  binaryoperatornode.h  binaryoperatornodetest.h  constant.h  mainwindow.h  operatornode.h  operatornodestub.h  operatortree.h  operatortreetest.h  unaryoperationtype.h  unaryoperatornode.h  unaryoperatornodetest.h  valueoperatornode.h  valueoperatornodetest.h
src/: binaryoperatornode.cpp  binaryoperatornodetest.cpp  main.cpp  mainwindow.cpp  operatornode.cpp  operatornodestub.cpp  operatortree.cpp  operatortreetest.cpp  unaryoperatornode.cpp  unaryoperatornodetest.cpp  valueoperatornode.cpp  valueoperatornodetest.cpp
